# ShroudLine

./: .gitignore  ARCIUM_PREDEPLOY_CHECKLIST.md  Anchor.toml  PRE_SUBMISSION_CHECKLIST.md  PROJECT_CONTEXT.md  README.md  package.json  railway.json
encrypted-ixs/src/: lib.rs
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/patches/: @arcium-hq+client+0.11.1.patch
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx  TransactionReceipt.tsx  WalletProviders.tsx  WhyShroudLine.tsx
frontend/src/lib/: fixtures.ts  node-stubs.ts  shroudline.ts  useFixtureMeta.ts
programs/prediction_settlement/: Cargo.toml
programs/prediction_settlement/src/: constants.rs  error.rs  lib.rs
programs/prediction_settlement/src/instructions/: init_market.rs  resolve_match.rs  submit_prediction.rs
programs/prediction_settlement/src/state/: mod.rs
programs/shroudline/: Cargo.toml
programs/shroudline/src/: constants.rs  (+2 more)
scripts/: create-market.mjs  demo-flow.ts  fetch-proof.ts  find_daily.mjs  get-api-token.ts  idl-live-snapshot.json  inspect-circuit-state.mjs  pack-existing-authorities.mjs  probe_cpi.mjs  proof-18179550.json  proof-18179759.json  real-resolve.ts  resolve-market.mjs  sync-schedule.mjs  upload-circuits.ts  verify-no-bypass.mjs
scripts/investigation/: FINDINGS.md  find-fixture.ts  inspect-scores.ts  list-onchain.mjs  period-field-check.ts  probe-finished.ts  snapshot-names.mjs  stat-keys.ts  verify-period-keys.ts
tests/: prediction_settlement.ts  shroudline.ts
worker/: README.md  index.mjs
(+10 files in other folders)
